--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,11 @@ url: #yoururl
 name:'Lightbulb Moments'
 logo:'assets/images/logo.png'
 favicon:'assets/images/logo.png'
+baseurl:''
+google_analytics:''
+disqus:''
+mailchimp-list:''
+include:["_Pages"]
 title: Lightbulb Moments
 description: A place to store and reflect on Lightbulb Moments as well as just general rants on and about tech.
 twitter:
@@ -15,7 +20,7 @@ author:
   avatar:
   email: #youremail
   url: #yoururl
-permalink: pretty
+permalink: /:title/
 
 baseurl: ""
 
