--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,5 @@
 site: Lightbulb Moments
-url: #yoururl
-name:'Lightbulb Moments'
-logo:'assets/images/logo.png'
-favicon:'assets/images/logo.png'
-baseurl:''
-google_analytics:''
-disqus:''
-mailchimp-list:''
-include:["_Pages"]
+url: lbmoments.github.io
 title: Lightbulb Moments
 description: A place to store and reflect on Lightbulb Moments as well as just general rants on and about tech.
 twitter:
@@ -20,7 +12,7 @@ author:
   avatar:
   email: #youremail
   url: #yoururl
-permalink: /:title/
+permalink:pretty
 
 baseurl: ""
 
