--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,14 @@
 site: Lightbulb Moments
 url: lbmoments.github.io
 title: Lightbulb Moments
+name: 'Lightbulb Moments'
+logo: 'assets/images/logo.png'
+favicon: 'assets/images/logo.png'
+baseurl: ''
+google_analytics: ''
+disqus: ''
+mailchimp-list: ''
+include: ["_Pages"]
 description: A place to store and reflect on Lightbulb Moments as well as just general rants on and about tech.
 twitter:
   username: henryarphillips
@@ -12,7 +20,7 @@ author:
   avatar:
   email: #youremail
   url: #yoururl
-permalink:pretty
+permalink: "/:title"
 
 baseurl: ""
 
