--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-site: Lightbulb Moments
-url: lbmoments.github.io
-title: Lightbulb Moments
+site: 'Lightbulb Moments'
+url: 'lbmoments.github.io'
+title: 'Lightbulb Moments'
 name: 'Lightbulb Moments'
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
