--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@ site: 'Lightbulb Moments'
 url: 'lbmoments.github.io'
 title: 'Lightbulb Moments'
 name: 'Lightbulb Moments'
-logo: 'assets/images/logo.png'
-favicon: 'assets/images/logo.png'
+logo: 'assets/js/images/color_logo_on_white.png'
+favicon: 'assets/js/images/logo_without_text_and_tagline.png'
 baseurl: ''
 google_analytics: ''
 disqus: ''
